Make Netherlands a super country under Happy Planet Index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<li class="country">Spain</li>
 				<li class="country">Indonesia</li>
 				<li class="country">El Salvador</li>
-				<li class="country">Netherlands</li>
+				<li class="superstar country Netherlands">Netherlands</li>
 				<li class="country">Argentina</li>
 				<li class="country">Philippines</li>
 			</ol>
