Add scatterplot for health and education spending per person

--- a/index.html
+++ b/index.html
@@ -124,13 +124,20 @@
 				<li class="country">France</li>
 			</ol>
 		</div>
+	</section>
 
+	<section class="score_highly">
+		<h2>Superstar countries score highly on many dimensions</h2>
+
+		<h3>Superstar countries invest a lot in their citizens</h3>
+		<div class="chart" id="health_ed_plot"></div>
 	</section>
 
 	</main>
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="js/superstar_countries.js"></script>
+	<script src="js/plots.js"></script>
 
 </body>
 </html>
