Add labels to health and education expenditure plot

--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
 		<h2>Superstar countries score highly on many dimensions</h2>
 
 		<h3>Superstar countries invest a lot in their citizens</h3>
-		<div class="chart" id="health_ed_plot"></div>
+		<div class="chart" id="health_ed_plot">
+			<p class="health label">Higher health spending per person</p>
+			<p class="ed label">Higher education spending per person</p>
+		</div>
 	</section>
 
 	</main>
