--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 			<p class="health label">Higher health spending per person</p>
 			<p class="ed label">Higher education spending per person</p>
 		</div>
+		<div class="chart" id="stable_system"></div>
 	</section>
 
 	</main>
