Add in beeswarms for metrics from Heritage

--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
 			<p class="health label">Higher health spending per person</p>
 			<p class="ed label">Higher education spending per person</p>
 		</div>
-		<div class="chart" id="stable_system"></div>
+
+		<h3>But they also create environments that allow their citizens' talents to flourish</h3>
+		<div class="chart" id="stable_system1"></div>
+		<div class="chart" id="stable_system2"></div>
 	</section>
 
 	</main>
