Add tooltip to health education spending plot

--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
 		<div class="chart" id="health_ed_plot">
 			<p class="health label">Higher health spending per person</p>
 			<p class="ed label">Higher education spending per person</p>
+			<div class="tooltip health_ed_plot hidden">
+				<h5 class="country_name">Test</h5>
+				<hr>
+				<p>Health spending per person: <span class="health_spending">1234</span></p>
+				<p>Education spending per person: <span class="edu_spending">1234</span></p>
+			</div>
 		</div>
 
 		<h3>But they also create environments that allow their citizens' talents to flourish</h3>
