Add tooltip to government metrics plot

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
 		</div>
 
 		<h3>But they also create environments that allow their citizens' talents to flourish</h3>
+		<div class="tooltip stable_system hidden">
+			<p class="country_name">Test</p>
+		</div>
 		<div class="chart" id="stable_system1"></div>
 		<div class="chart" id="stable_system2"></div>
 	</section>
