Add one more tooltip to stable system plots

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
 			<p class="country_name">Test</p>
 		</div>
 		<div class="chart" id="stable_system1"></div>
+		<div class="tooltip stable_system hidden">
+			<p class="country_name">Test</p>
+		</div>
 		<div class="chart" id="stable_system2"></div>
 	</section>
 
