--- a/index.html
+++ b/index.html
@@ -152,11 +152,17 @@
 		<div class="chart" id="stable_system2"></div>
 	</section>
 
+	<section class="solid_all_around">
+		<h2>Superstar countries don't just excel at one thing, they rank highly on all dimensions</h2>
+		<div class="chart" id="suns"></div>
+	</section>
+
 	</main>
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="js/superstar_countries.js"></script>
 	<script src="js/plots.js"></script>
+	<script src="js/country_suns.js"></script>
 
 </body>
 </html>
