--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 	<main>
 	<h1>What makes a "good" government?</h1>
 
+	<p>From economic output to life expectancy, from sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  Certain countries seem to lead the way when it comes to successful policies and outcomes.</p>
+	<p>Who are these high-performing countries and what are their governments getting right?</p>
+
 	<section class="top_20_countries">
 		<h2>Superstar countries</h2>
+		<p>Countries that appear again and again at the top of various rankings</p>
 
 		<div class="rankings hpi">
 			<h4 class="metric_name">Happy Planet Index</h4>
@@ -124,12 +128,13 @@
 				<li class="country">France</li>
 			</ol>
 		</div>
+		<p style="clear: both;">What do these high-performing countries have in common? What is the secret to their success?</p>
 	</section>
 
 	<section class="score_highly">
-		<h2>Superstar countries score highly on many dimensions</h2>
+		<!-- <h2>Superstar countries score highly on many dimensions</h2> -->
 
-		<h3>Superstar countries invest a lot in their citizens</h3>
+		<h2>Superstar countries invest a lot in their citizens...</h2>
 		<div class="chart" id="health_ed_plot">
 			<p class="health label">Higher health spending per person</p>
 			<p class="ed label">Higher education spending per person</p>
@@ -141,7 +146,7 @@
 			</div>
 		</div>
 
-		<h3>But they also create environments that allow their citizens' talents to flourish</h3>
+		<h2>But they also create environments that allow their citizens' talents to flourish.</h2>
 		<div class="tooltip stable_system hidden">
 			<p class="country_name">Test</p>
 		</div>
@@ -153,7 +158,7 @@
 	</section>
 
 	<section class="solid_all_around">
-		<h2>Superstar countries don't just excel at one thing, they rank highly on all dimensions</h2>
+		<h2>Superstar countries don't just excel at one thing, they score highly on all dimensions.</h2>
 		<div class="chart" id="suns"></div>
 	</section>
 
