Adjust spacing and layout. Also add legend to health and edu plot

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+	<!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"> -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/style.css" />
 </head>
@@ -18,123 +19,131 @@
 	<main>
 	<h1>What makes a "good" government?</h1>
 
-	<p>From economic output to life expectancy, from sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  Certain countries seem to lead the way when it comes to successful policies and outcomes.</p>
-	<p>Who are these high-performing countries and what are their governments getting right?</p>
+	<p class="intro">From economic output to life expectancy, sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  However, certain countries seem to be leading the way when it comes to successful policies and outcomes.</p>
+	<p class="intro">Who are these high-performing countries and what are their governments getting right?</p>
 
 	<section class="top_20_countries">
 		<h2>Superstar countries</h2>
-		<p>Countries that appear again and again at the top of various rankings</p>
+		<p class="subtitle">Countries that appear again and again at the top of various rankings</p>
 
-		<div class="rankings hpi">
-			<h4 class="metric_name">Happy Planet Index</h4>
-			<ol class="country_list">
-				<li class="superstar country Costa_Rica">Costa Rica</li>
-				<li class="country">Colombia</li>
-				<li class="country">Mexico</li>
-				<li class="country">Vanuatu</li>
-				<li class="country">Vietnam</li>
-				<li class="country">Panama</li>
-				<li class="country">Nicaragua</li>
-				<li class="country">Bangladesh</li>
-				<li class="country">Thailand</li>
-				<li class="country">Ecuador</li>
-				<li class="country">Jamaica</li>
-				<li class="country">Albania</li>
-				<li class="superstar country Norway">Norway</li>
-				<li class="country">Uruguay</li>
-				<li class="country">Spain</li>
-				<li class="country">Indonesia</li>
-				<li class="country">El Salvador</li>
-				<li class="superstar country Netherlands">Netherlands</li>
-				<li class="country">Argentina</li>
-				<li class="country">Philippines</li>
-			</ol>
-		</div>
+		<div class="rankings_container">
+			<div class="rankings hpi">
+				<h4 class="metric_name">Happy Planet Index</h4>
+				<ol class="country_list">
+					<li class="superstar country Costa_Rica">Costa Rica</li>
+					<li class="country">Colombia</li>
+					<li class="country">Mexico</li>
+					<li class="country">Vanuatu</li>
+					<li class="country">Vietnam</li>
+					<li class="country">Panama</li>
+					<li class="country">Nicaragua</li>
+					<li class="country">Bangladesh</li>
+					<li class="country">Thailand</li>
+					<li class="country">Ecuador</li>
+					<li class="country">Jamaica</li>
+					<li class="country">Albania</li>
+					<li class="superstar country Norway">Norway</li>
+					<li class="country">Uruguay</li>
+					<li class="country">Spain</li>
+					<li class="country">Indonesia</li>
+					<li class="country">El Salvador</li>
+					<li class="superstar country Netherlands">Netherlands</li>
+					<li class="country">Argentina</li>
+					<li class="country">Philippines</li>
+				</ol>
+			</div>
 
-		<div class="rankings whrs">
-			<h4 class="metric_name">World Happiness Report Score</h4>
-			<ol class="country_list">
-				<li class="superstar country Finland">Finland</li>
-				<li class="superstar country Denmark">Denmark</li>
-				<li class="superstar country Norway">Norway</li>
-				<li class="superstar country Iceland">Iceland</li>
-				<li class="superstar country Switzerland">Switzerland</li>
-				<li class="superstar country Netherlands">Netherlands</li>
-				<li class="country">Israel</li>
-				<li class="superstar country New_Zealand">New Zealand</li>
-				<li class="superstar country Austria">Austria</li>
-				<li class="superstar country Sweden">Sweden</li>
-				<li class="superstar country Australia">Australia</li>
-				<li class="superstar country Costa_Rica">Costa Rica</li>
-				<li class="superstar country United_Kingdom">United Kingdom</li>
-				<li class="superstar country Germany">Germany</li>
-				<li class="superstar country Luxembourg">Luxembourg</li>
-				<li class="superstar country Ireland">Ireland</li>
-				<li class="country">United Arab Emirates</li>
-				<li class="superstar country United_States">United States</li>
-				<li class="superstar country Belgium">Belgium</li>
-				<li class="country">Czech Republic</li>
-			</ol>
-		</div>
+			<div class="rankings whrs">
+				<h4 class="metric_name">World Happiness Report Score</h4>
+				<ol class="country_list">
+					<li class="superstar country Finland">Finland</li>
+					<li class="superstar country Denmark">Denmark</li>
+					<li class="superstar country Norway">Norway</li>
+					<li class="superstar country Iceland">Iceland</li>
+					<li class="superstar country Switzerland">Switzerland</li>
+					<li class="superstar country Netherlands">Netherlands</li>
+					<li class="country">Israel</li>
+					<li class="superstar country New_Zealand">New Zealand</li>
+					<li class="superstar country Austria">Austria</li>
+					<li class="superstar country Sweden">Sweden</li>
+					<li class="superstar country Australia">Australia</li>
+					<li class="superstar country Costa_Rica">Costa Rica</li>
+					<li class="superstar country United_Kingdom">United Kingdom</li>
+					<li class="superstar country Germany">Germany</li>
+					<li class="superstar country Luxembourg">Luxembourg</li>
+					<li class="superstar country Ireland">Ireland</li>
+					<li class="country">United Arab Emirates</li>
+					<li class="superstar country United_States">United States</li>
+					<li class="superstar country Belgium">Belgium</li>
+					<li class="country">Czech Republic</li>
+				</ol>
+			</div>
 
-		<div class="rankings hdi">
-			<h4 class="metric_name">Human Development Index</h4>
-			<ol class="country_list">
-				<li class="superstar country Norway">Norway</li>
-				<li class="superstar country Switzerland">Switzerland</li>
-				<li class="superstar country Australia">Australia</li>
-				<li class="superstar country Ireland">Ireland</li>
-				<li class="superstar country Germany">Germany</li>
-				<li class="superstar country Iceland">Iceland</li>
-				<li class="superstar country Sweden">Sweden</li>
-				<li class="superstar country Singapore">Singapore</li>
-				<li class="superstar country Netherlands">Netherlands</li>
-				<li class="superstar country Denmark">Denmark</li>
-				<li class="superstar country Canada">Canada</li>
-				<li class="superstar country United_States">United States</li>
-				<li class="superstar country United_Kingdom">United Kingdom</li>
-				<li class="superstar country Finland">Finland</li>
-				<li class="superstar country New_Zealand">New Zealand</li>
-				<li class="superstar country Belgium">Belgium</li>
-				<li class="country">Liechtenstein</li>
-				<li class="superstar country Japan">Japan</li>
-				<li class="superstar country Austria">Austria</li>
-				<li class="superstar country Luxembourg">Luxembourg</li>
-			</ol>
-		</div>
+			<div class="rankings hdi">
+				<h4 class="metric_name">Human Development Index</h4>
+				<ol class="country_list">
+					<li class="superstar country Norway">Norway</li>
+					<li class="superstar country Switzerland">Switzerland</li>
+					<li class="superstar country Australia">Australia</li>
+					<li class="superstar country Ireland">Ireland</li>
+					<li class="superstar country Germany">Germany</li>
+					<li class="superstar country Iceland">Iceland</li>
+					<li class="superstar country Sweden">Sweden</li>
+					<li class="superstar country Singapore">Singapore</li>
+					<li class="superstar country Netherlands">Netherlands</li>
+					<li class="superstar country Denmark">Denmark</li>
+					<li class="superstar country Canada">Canada</li>
+					<li class="superstar country United_States">United States</li>
+					<li class="superstar country United_Kingdom">United Kingdom</li>
+					<li class="superstar country Finland">Finland</li>
+					<li class="superstar country New_Zealand">New Zealand</li>
+					<li class="superstar country Belgium">Belgium</li>
+					<li class="country">Liechtenstein</li>
+					<li class="superstar country Japan">Japan</li>
+					<li class="superstar country Austria">Austria</li>
+					<li class="superstar country Luxembourg">Luxembourg</li>
+				</ol>
+			</div>
 
-		<div class="rankings seda">
-			<h4 class="metric_name">Sustainable Economic Development Assessment</h4>
-			<ol class="country_list">
-				<li class="superstar country Norway">Norway</li>
-				<li class="superstar country Switzerland">Switzerland</li>
-				<li class="superstar country Iceland">Iceland</li>
-				<li class="superstar country Luxembourg">Luxembourg</li>
-				<li class="superstar country Denmark">Denmark</li>
-				<li class="superstar country Sweden">Sweden</li>
-				<li class="superstar country Singapore">Singapore</li>
-				<li class="superstar country Finland">Finland</li>
-				<li class="superstar country Netherlands">Netherlands</li>
-				<li class="superstar country Austria">Austria</li>
-				<li class="superstar country Ireland">Ireland</li>
-				<li class="superstar country Germany">Germany</li>
-				<li class="superstar country Australia">Australia</li>
-				<li class="superstar country New_Zealand">New Zealand</li>
-				<li class="superstar country Belgium">Belgium</li>
-				<li class="superstar country Canada">Canada</li>
-				<li class="superstar country United_States">United States</li>
-				<li class="superstar country Japan">Japan</li>
-				<li class="superstar country United_Kingdom">United Kingdom</li>
-				<li class="country">France</li>
-			</ol>
+			<div class="rankings seda">
+				<h4 class="metric_name">Sustainable Economic Development Assessment</h4>
+				<ol class="country_list">
+					<li class="superstar country Norway">Norway</li>
+					<li class="superstar country Switzerland">Switzerland</li>
+					<li class="superstar country Iceland">Iceland</li>
+					<li class="superstar country Luxembourg">Luxembourg</li>
+					<li class="superstar country Denmark">Denmark</li>
+					<li class="superstar country Sweden">Sweden</li>
+					<li class="superstar country Singapore">Singapore</li>
+					<li class="superstar country Finland">Finland</li>
+					<li class="superstar country Netherlands">Netherlands</li>
+					<li class="superstar country Austria">Austria</li>
+					<li class="superstar country Ireland">Ireland</li>
+					<li class="superstar country Germany">Germany</li>
+					<li class="superstar country Australia">Australia</li>
+					<li class="superstar country New_Zealand">New Zealand</li>
+					<li class="superstar country Belgium">Belgium</li>
+					<li class="superstar country Canada">Canada</li>
+					<li class="superstar country United_States">United States</li>
+					<li class="superstar country Japan">Japan</li>
+					<li class="superstar country United_Kingdom">United Kingdom</li>
+					<li class="country">France</li>
+				</ol>
+			</div>
 		</div>
-		<p style="clear: both;">What do these high-performing countries have in common? What is the secret to their success?</p>
+		<p class="transitionQ">What do these high-performing countries have in common? What is the secret to their success?</p>
 	</section>
 
 	<section class="score_highly">
 		<!-- <h2>Superstar countries score highly on many dimensions</h2> -->
 
 		<h2>Superstar countries invest a lot in their citizens...</h2>
+		<div class="legend">
+			<svg height="25px" width="20px">
+				<circle r="5" cx="6" cy="12"></circle>
+			</svg>
+			Countries that appear in the top 20 of multiple rankings
+		</div>
 		<div class="chart" id="health_ed_plot">
 			<p class="health label">Higher health spending per person</p>
 			<p class="ed label">Higher education spending per person</p>
