Add links to ranking names for more information. Also a few more spacing tweaks

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div class="rankings_container">
 			<div class="rankings hpi">
-				<h4 class="metric_name">Happy Planet Index</h4>
+				<h4 class="metric_name"><a href="http://happyplanetindex.org/" target="_blank">Happy Planet Index</a></h4>
 				<ol class="country_list">
 					<li class="superstar country Costa_Rica">Costa Rica</li>
 					<li class="country">Colombia</li>
@@ -54,7 +54,7 @@
 			</div>
 
 			<div class="rankings whrs">
-				<h4 class="metric_name">World Happiness Report Score</h4>
+				<h4 class="metric_name"><a href="http://worldhappiness.report/ed/2018/" target="_blank">World Happiness Report Score</a></h4>
 				<ol class="country_list">
 					<li class="superstar country Finland">Finland</li>
 					<li class="superstar country Denmark">Denmark</li>
@@ -80,7 +80,7 @@
 			</div>
 
 			<div class="rankings hdi">
-				<h4 class="metric_name">Human Development Index</h4>
+				<h4 class="metric_name"><a href="http://hdr.undp.org/en/data" target="_blank">Human Development Index</a></h4>
 				<ol class="country_list">
 					<li class="superstar country Norway">Norway</li>
 					<li class="superstar country Switzerland">Switzerland</li>
@@ -106,7 +106,7 @@
 			</div>
 
 			<div class="rankings seda">
-				<h4 class="metric_name">Sustainable Economic Development Assessment</h4>
+				<h4 class="metric_name"><a href="https://www.bcg.com/en-gb/publications/interactives/seda-2018-guide.aspx" target="_blank">Sustainable Economic Development Assessment</a></h4>
 				<ol class="country_list">
 					<li class="superstar country Norway">Norway</li>
 					<li class="superstar country Switzerland">Switzerland</li>
@@ -139,7 +139,7 @@
 
 		<h2>Superstar countries invest a lot in their citizens...</h2>
 		<div class="legend">
-			<svg height="25px" width="20px">
+			<svg height="25px" width="16px">
 				<circle r="5" cx="6" cy="12"></circle>
 			</svg>
 			Countries that appear in the top 20 of multiple rankings
