Start adding legend for country suns plot

--- a/index.html
+++ b/index.html
@@ -168,6 +168,26 @@
 
 	<section class="solid_all_around">
 		<h2>Superstar countries don't just excel at one thing, they score highly on all dimensions.</h2>
+		<div class="legend sunLegend">
+			<svg id="sun_legend"></svg>
+			<div class="legend_explanation">
+				<ol>
+					<li>Health expenditure</li>
+					<li>Education expenditure</li>
+					<li>Political stability</li>
+					<li>Government effectiveness</li>
+					<li>Regulatory quality</li>
+					<li>Rule of law</li>
+					<li>Control of corruption</li>
+					<li>Judicial effectiveness</li>
+					<li>Government integrity</li>
+					<li>Property rights</li>
+					<li>Overall economic freedom</li>
+					<li>Financial freedom</li>
+				</ol>
+			</div>
+			<p>Longer line is better</p>
+		</div>
 		<div class="chart" id="suns"></div>
 	</section>
 
