Finalize country suns legend and more text and layout adjustments

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 		</div>
 
 		<h2>But they also create environments that allow their citizens' talents to flourish.</h2>
+		<p class="intro">Superstar countries almost always rank at the top when it comes to various elements neecessary for effective governance and economic freedom.</p>
 		<div class="tooltip stable_system hidden">
 			<p class="country_name">Test</p>
 		</div>
@@ -169,6 +170,7 @@
 	<section class="solid_all_around">
 		<h2>Superstar countries don't just excel at one thing, they score highly on all dimensions.</h2>
 		<div class="legend sunLegend">
+			<h4>How to read:</h4>
 			<svg id="sun_legend"></svg>
 			<div class="legend_explanation">
 				<ol>
@@ -186,7 +188,8 @@
 					<li>Financial freedom</li>
 				</ol>
 			</div>
-			<p>Longer line is better</p>
+			<p>Line length reflects what percentile the country scored for each metric so longer lines are better.</p>
+			<p>Missing lines indicate there was no data for that country on that specific metric.</p>
 		</div>
 		<div class="chart" id="suns"></div>
 	</section>
