Add footer with data source credit

--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
 
 	</main>
 
+	<footer>
+		Data source: World Government Summit provided dataset.
+	</footer>
+
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="js/superstar_countries.js"></script>
 	<script src="js/plots.js"></script>
