Fix typo and set width to be 960px

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		</div>
 
 		<h2>But they also create environments that allow their citizens' talents to flourish.</h2>
-		<p class="intro">Superstar countries almost always rank at the top when it comes to various elements neecessary for effective governance and economic freedom.</p>
+		<p class="intro">Superstar countries almost always rank at the top when it comes to various elements necessary for effective governance and economic freedom.</p>
 		<div class="tooltip stable_system hidden">
 			<p class="country_name">Test</p>
 		</div>
