Indicate ties in country rankings

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 					<li class="superstar country United_Kingdom">United Kingdom</li>
 					<li class="superstar country Finland">Finland</li>
 					<li class="superstar country New_Zealand">New Zealand</li>
-					<li class="superstar country Belgium">Belgium</li>
-					<li class="country">Liechtenstein</li>
+					<li class="superstar country Belgium">Belgium*</li>
+					<li class="country">Liechtenstein*</li>
 					<li class="superstar country Japan">Japan</li>
 					<li class="superstar country Austria">Austria</li>
 					<li class="superstar country Luxembourg">Luxembourg</li>
@@ -116,9 +116,9 @@
 					<li class="superstar country Sweden">Sweden</li>
 					<li class="superstar country Singapore">Singapore</li>
 					<li class="superstar country Finland">Finland</li>
-					<li class="superstar country Netherlands">Netherlands</li>
-					<li class="superstar country Austria">Austria</li>
-					<li class="superstar country Ireland">Ireland</li>
+					<li class="superstar country Netherlands">Netherlands*</li>
+					<li class="superstar country Austria">Austria*</li>
+					<li class="superstar country Ireland">Ireland*</li>
 					<li class="superstar country Germany">Germany</li>
 					<li class="superstar country Australia">Australia</li>
 					<li class="superstar country New_Zealand">New Zealand</li>
@@ -130,6 +130,7 @@
 					<li class="country">France</li>
 				</ol>
 			</div>
+			<p class="footnote">* indicates tie</p>
 		</div>
 		<p class="transitionQ">What do these high-performing countries have in common? What is the secret to their success?</p>
 	</section>
@@ -156,7 +157,7 @@
 		</div>
 
 		<h2>But they also create environments that allow their citizens' talents to flourish.</h2>
-		<p class="intro">Superstar countries almost always rank at the top when it comes to various elements necessary for effective governance and economic freedom.</p>
+		<p class="intro">Superstar countries almost always rank at the top when it comes to various aspects of effective governance and economic freedom.</p>
 		<div class="tooltip stable_system hidden">
 			<p class="country_name">Test</p>
 		</div>
@@ -188,7 +189,7 @@
 					<li>Financial freedom</li>
 				</ol>
 			</div>
-			<p>Line length reflects what percentile the country scored for each metric so longer lines are better.</p>
+			<p>Line length reflects what percentile the country scored for each metric. Longer lines are better.</p>
 			<p>Missing lines indicate there was no data for that country on that specific metric.</p>
 		</div>
 		<div class="chart" id="suns"></div>
