Some more wording and layout tweaks

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<main>
 	<h1>What makes a "good" government?</h1>
 
-	<p class="intro">From economic output to life expectancy, sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  However, certain countries seem to be leading the way when it comes to successful policies and outcomes.</p>
+	<p class="intro">From economic output to life expectancy, sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  However, certain countries seem to be leading the way when it comes to policies and outcomes that allow people to thrive.</p>
 	<p class="intro">Who are these high-performing countries and what are their governments getting right?</p>
 
 	<section class="top_20_countries">
@@ -139,6 +139,7 @@
 		<!-- <h2>Superstar countries score highly on many dimensions</h2> -->
 
 		<h2>Superstar countries invest a lot in their citizens...</h2>
+		<p class="subtitle">Their spending ensures citizens are healthy and well-educated.</p>
 		<div class="legend">
 			<svg height="25px" width="16px">
 				<circle r="5" cx="6" cy="12"></circle>
@@ -157,7 +158,7 @@
 		</div>
 
 		<h2>But they also create environments that allow their citizens' talents to flourish.</h2>
-		<p class="intro">Superstar countries almost always rank at the top when it comes to various aspects of effective governance and economic freedom.</p>
+		<p class="subtitle">Superstar countries almost always rank at the top when it comes to various aspects of effective governance and economic freedom.</p>
 		<div class="tooltip stable_system hidden">
 			<p class="country_name">Test</p>
 		</div>
@@ -170,6 +171,7 @@
 
 	<section class="solid_all_around">
 		<h2>Superstar countries don't just excel at one thing, they score highly on all dimensions.</h2>
+		<p class="subtitle">While some countries may rank just as highly as superstar countries on one or two metrics, they tend to be lacking in other areas.</p>
 		<div class="legend sunLegend">
 			<h4>How to read:</h4>
 			<svg id="sun_legend"></svg>
