Make some more wording and layout tweaks

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<main>
 	<h1>What makes a "good" government?</h1>
 
-	<p class="intro">From economic output to life expectancy, sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  However, certain countries seem to be leading the way when it comes to policies and outcomes that allow people to thrive.</p>
+	<p class="intro">From economic output to life expectancy, sustainable development to citizens' perceptions of their own happiness, success for countries and the governments that run them can be measured on various dimensions.  However, certain countries seem to be leading the way when it comes to policies and outcomes that allow their people to thrive.</p>
 	<p class="intro">Who are these high-performing countries and what are their governments getting right?</p>
 
 	<section class="top_20_countries">
